# tonic-server-stream-err-bug-repro

./: .gitignore  Cargo.toml  README.md  build.rs  trace_service.proto
src/err_client/: main.rs
src/server/: main.rs
src/trace_client/: main.rs
